020_retirement/grade.txt
Grading at 09/06/2022:03:27:04.566800
For commit ID 582f371f51f30985f06c043b617164c48d5528c4
Grading at Mon Sep  5 11:27:04 PM EDT 2022
Attempting to compile retirement.c
retirement.c:32:6: error: return type of ‘main’ is not ‘int’ [-Werror=main]
   32 | void main() {
      |      ^~~~
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
